# demo_mcp_on_amazon_bedrock

./: .gitignore  AmazonQ.md  README.en.md  README.md  chatbot.py  env_dev  pyproject.toml  start_all.sh  start_chatbot.sh  start_mcp.sh  stop_all.sh
cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: bedrock-mcp-stack.ts
conf/: config.json  user_mcp_config.json
docs/: ai_search_market_report.html  japan_travel_handbook.html  project_documentation.html  rows.txt  tesla_stock_analysis.html  xiaomi_su7_ultra_intro.html
docs/assets/: script.js
docs/tengshi_z9_gt/: index.html
src/: chat_client.py  chat_client_stream.py  main.py  mcp_client.py  utils.py
tests/: test_add_mcp_api.sh  test_chat_api.sh  test_chat_api_stream.sh
