[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.1",
    "fastapi>=0.115.6",
    "mcp>=1.1.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-local-storage>=0.0.25",
    "uvicorn>=0.34.0",
]
